# cmake_precompiled_header_example

./: CMakeLists.txt  main.cpp
my_common_lib_folder/: CMakeLists.txt  my_precomp_header.h  my_precomp_lib.cpp
